Fixed issue with Drawer Layout

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@id/factFragment">
+    app:startDestination="@id/nav_fact">
     <fragment
-        android:id="@+id/contactFragment"
+        android:id="@+id/nav_contact"
         android:name="com.example.penguindexapp.Fragments.ContactFragment"
         android:label="Contact Us"
         tools:layout="@layout/fragment_contact" />
     <fragment
-        android:id="@+id/factFragment"
+        android:id="@+id/nav_fact"
         android:name="com.example.penguindexapp.ViewPager.FactFragment"
         android:label="Penguin Types"
         tools:layout="@layout/fragment_fact" />
