--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,7 +9,7 @@
             android:icon="@drawable/contact"
             android:title="Contact" />
         <item
-            android:id="@+id/nav_fact"
+            android:id="@+id/nav_vphost"
             android:icon="@drawable/penguins"
             android:title="Penguins" />
     </group>
