Added RecyclerView page which will soon operate as a personality quiz fragment

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,5 +12,9 @@
             android:id="@+id/nav_vphost"
             android:icon="@drawable/penguins"
             android:title="Penguins" />
+        <item
+            android:id="@+id/nav_questions"
+            android:icon="@drawable/penguins"
+            android:title="PersonalityQuiz" />
     </group>
 </menu>
