--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,5 +22,14 @@
     <fragment
         android:id="@+id/nav_questions"
         android:name="com.example.penguindexapp.RecyclerView.QuestionsFragment"
-        android:label="Personality Quiz" />
+        android:label="Personality Quiz" >
+        <action
+            android:id="@+id/action_nav_questions_to_calculateAnswers"
+            app:destination="@id/calculateAnswers" />
+    </fragment>
+    <fragment
+        android:id="@+id/calculateAnswers"
+        android:name="com.example.penguindexapp.RecyclerView.CalculateAnswers"
+        android:label="fragment_calculate_answers"
+        tools:layout="@layout/fragment_calculate_answers" />
 </navigation>
