--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,6 +5,10 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_credits"
+            android:icon="@drawable/penguins"
+            android:title="Credits" />
+        <item
             android:id="@+id/nav_contact"
             android:icon="@drawable/contact"
             android:title="Contact" />
