--- a/app/src/main/res/layout/fragment_data_type.xml
+++ b/app/src/main/res/layout/fragment_data_type.xml
@@ -3,27 +3,41 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context=".ListView.DataTypeFragment">
 
     <ListView
         android:id="@+id/dataTypeListView"
         android:layout_width="match_parent"
-        android:layout_height="484dp"
+        android:layout_height="match_parent"
         android:layout_weight="1" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="1">
 
-        <TextView
-            android:id="@+id/creditsSource"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/creditsSource"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="TextView" />
+
+            <ImageView
+                android:id="@+id/creditsImage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                tools:src="@drawable/ic_launcher_foreground" />
+
+        </LinearLayout>
     </ScrollView>
 
 </LinearLayout>
