--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -35,6 +35,6 @@
     <fragment
         android:id="@+id/nav_credits"
         android:name="com.example.penguindexapp.ListView.DataTypeFragment"
-        android:label="fragment_data_type"
+        android:label="Credits"
         tools:layout="@layout/fragment_data_type" />
 </navigation>
