--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -40,18 +40,18 @@
         android:paddingBottom="10dp">
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/imageView6"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="3"
-            android:src="@drawable/phone" />
+            android:src="@drawable/message" />
 
         <Button
             android:id="@+id/phoneBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Phone" />
+            android:text="Text" />
 
     </LinearLayout>
 
