#6 Spell checked for spelling errors

--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -79,7 +79,6 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/phoneBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -94,11 +93,11 @@
             android:src="@drawable/phone" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/phoneBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Button" />
+            android:text="Phone" />
     </LinearLayout>
 
     <LinearLayout
