--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -122,6 +122,27 @@
             android:text="Visit Our Instagram!" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingRight="10dp">
+
+        <ImageView
+            android:id="@+id/imageView9"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_weight="3"
+            android:src="@drawable/contacts" />
+
+        <Button
+            android:id="@+id/contactsBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Add Us To Contacts" />
+    </LinearLayout>
+
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="match_parent"
