--- a/app/src/main/res/layout/fragment_v_p_host.xml
+++ b/app/src/main/res/layout/fragment_v_p_host.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewPager.VPHostFragment">
+    tools:context=".ViewPager.VPHostFragment"
+    android:layoutAnimation="@anim/layout_slidefromtop">
 <!--    <com.google.android.material.tabs.TabLayout-->
 <!--        android:id="@+id/tabLayout"-->
 <!--        android:layout_width="match_parent"-->
@@ -12,6 +13,6 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/tipsViewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 </FrameLayout>
