--- a/app/src/main/res/layout/fragment_fact.xml
+++ b/app/src/main/res/layout/fragment_fact.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="@dimen/extraPadding"
     tools:context=".ViewPager.FactFragment">
 
 
@@ -20,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="5dp">
+        android:padding="@dimen/basicPadding">
 
         <TextView
             android:layout_width="match_parent"
@@ -40,7 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="5dp">
+        android:padding="@dimen/basicPadding">
 
         <TextView
             android:id="@+id/textView5"
@@ -62,7 +63,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center|top"
-        android:paddingTop="50dp"
+        android:paddingTop="@dimen/separationParagraph"
         android:text="Description"
         android:textSize="12sp" />
 
