--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -9,5 +9,6 @@
         android:id="@+id/creditsDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textSize="@dimen/lessImportant" />
 </androidx.constraintlayout.widget.ConstraintLayout>
