--- a/app/src/main/res/layout/fragment_fact.xml
+++ b/app/src/main/res/layout/fragment_fact.xml
@@ -13,6 +13,7 @@
         android:id="@+id/factTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/chewy"
         android:gravity="center|top"
         android:text="Title"
         android:textSize="30sp" />
@@ -27,6 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/acme"
             android:text="Height: " />
 
         <TextView
@@ -34,6 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/acme"
             android:text="TextView" />
     </LinearLayout>
 
@@ -48,6 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/acme"
             android:text="Weight:" />
 
         <TextView
@@ -55,6 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/acme"
             android:text="TextView" />
     </LinearLayout>
 
@@ -62,6 +67,7 @@
         android:id="@+id/factDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/acme"
         android:gravity="center|top"
         android:paddingTop="@dimen/separationParagraph"
         android:text="Description"
