--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -9,6 +9,7 @@
         android:id="@+id/creditsDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/acme"
         android:text="TextView"
         android:textSize="@dimen/lessImportant" />
 </androidx.constraintlayout.widget.ConstraintLayout>
