--- a/app/src/main/res/layout/recycle_row.xml
+++ b/app/src/main/res/layout/recycle_row.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
+        android:fontFamily="@font/chewy"
         android:text="QuestionText"
         android:textAlignment="textStart"
         android:textSize="@dimen/questions" />
@@ -29,6 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
+            android:fontFamily="@font/acme"
             android:text="Disagree"
             android:textAlignment="textEnd" />
 
@@ -38,6 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:checked="true"
+            android:fontFamily="@font/acme"
             android:text="Neutral" />
 
         <RadioButton
@@ -46,6 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:checked="false"
+            android:fontFamily="@font/acme"
             android:text="Agree" />
 
     </RadioGroup>
